--- a/index.html
+++ b/index.html
@@ -107,6 +107,17 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="https://github.com/eric-hashempour/PortfolioProjects/tree/main/Power%20BI%20Dashboard">Power BI Dashboard<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/eric-hashempour/PortfolioProjects/tree/main/Power%20BI%20Dashboard" class="image fit"><img src="images/business-data-dashboard-provide-modish-260nw-2193806535.webp" alt="" /></a>
+									<p>Power BI Data Visualization of Survey Participants.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/eric-hashempour/PortfolioProjects/tree/main/Power%20BI%20Dashboard" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://github.com/eric-hashempour/PortfolioProjects/blob/main/Amazon%20Web%20Scraper%20Project.ipynb">Amazon Web Scraping<br />
 										</a></h2>
 									</header>
