Update comfort food project and site content

--- a/index.html
+++ b/index.html
@@ -49,18 +49,29 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/eric-hashempour/PortfolioProjects/tree/main/Nashville%20Housing%20Analysis%20SQL">Data Cleaning in SQL<br />
+									<h2><a href="https://github.com/eric-hashempour/comfort-food-analysis">Data Cleaning in SQL<br />
 									</a></h2>
-									<p>In this project, we clean housing data in SQL server.</p>
+									<p>End-to-End Analysis of Comfort Food & Health Perception using Excel, Python, SQL, and Power BI.</p>
 								</header>
-								<a href="https://github.com/eric-hashempour/PortfolioProjects/tree/main/Nashville%20Housing%20Analysis%20SQL" class="image main"><img src="images/housing.jpg" alt="" /></a>
+								<a href="https://github.com/eric-hashempour/comfort-food-analysis" class="image main"><img src="images/comfort_food.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/eric-hashempour/PortfolioProjects/tree/main/Nashville%20Housing%20Analysis%20SQL" class="button large">View Project</a></li>
+									<li><a href="https://github.com/eric-hashempour/comfort-food-analysis" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<h2><a href="https://github.com/eric-hashempour/PortfolioProjects/tree/main/Nashville%20Housing%20Analysis%20SQL">Data Cleaning in SQL<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/eric-hashempour/PortfolioProjects/tree/main/Nashville%20Housing%20Analysis%20SQL" class="image fit"><img src="images/housing.jpg" alt="" /></a>
+									<p>Housing data cleaning in SQL server.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/eric-hashempour/PortfolioProjects/tree/main/Nashville%20Housing%20Analysis%20SQL" class="button">View Project</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<h2><a href="https://github.com/eric-hashempour/PortfolioProjects/tree/main/Data%20Warehouse%20Analytics%20Project%20SQL">Data Warehouse Analytics<br />
