--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/eric-hashempour/comfort-food-analysis">Data Cleaning in SQL<br />
+									<h2><a href="https://github.com/eric-hashempour/comfort-food-analysis">College Student Food Choices<br />
 									</a></h2>
 									<p>End-to-End Analysis of Comfort Food & Health Perception using Excel, Python, SQL, and Power BI.</p>
 								</header>
