--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/eric-hashempour/comfort-food-analysis">College Student Food Choices<br />
+									<h2><a href="https://github.com/eric-hashempour/comfort-food-analysis">Comfort Food Analysis Project<br />
 									</a></h2>
-									<p>End-to-End Analysis of Comfort Food & Health Perception using Excel, Python, SQL, and Power BI.</p>
+									<p>End-to-End Analysis of Comfort Food choices of college students using Excel, Python, SQL, and Power BI.</p>
 								</header>
 								<a href="https://github.com/eric-hashempour/comfort-food-analysis" class="image main"><img src="images/comfort_food.jpg" alt="" /></a>
 								<ul class="actions special">
