--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/eric-hashempour/comfort-food-analysis">Comfort Food Analysis Project<br />
 									</a></h2>
-									<p>End-to-End Analysis of Comfort Food choices of college students using Excel, Python, SQL, and Power BI.</p>
+									<p>End-to-End Analysis of college students' comfort food choices using Excel, Python, SQL, and Power BI.</p>
 								</header>
 								<a href="https://github.com/eric-hashempour/comfort-food-analysis" class="image main"><img src="images/comfort_food.jpg" alt="" /></a>
 								<ul class="actions special">
